# bmstu-bach-sem4-oop

./: README.md
lab_01/3D_viewer/: 3D_viewer.pro  action.cpp  action.h  config.h  edge.cpp  edge.h  edges.cpp  edges.h  error.cpp  error.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  point.cpp  point.h  task_datastructs.cpp  task_datastructs.h  vertices.cpp  vertices.h
lab_02/: CMakeLists.txt
lab_02/imp/: const_iterator.inl  iterator.inl  matrix_access.inl  matrix_assign.inl  matrix_base.inl  matrix_construct.inl  matrix_fillers.inl  matrix_iterators.inl  matrix_math.inl  matrix_operations.inl  matrix_private.inl  matrix_restruct.inl  matrix_row.inl
lab_02/include/: const_iterator.hpp  exceptions.hpp  iterator.hpp  matrix.hpp  matrix_base.hpp
lab_02/src/: main.cpp
lab_02/tests/: test_matrix_access.inl  test_matrix_assign.inl  test_matrix_construct.inl  test_matrix_fillers.inl  test_matrix_math.inl  test_matrix_restruct.inl  tests.hpp
lab_03/: main.cpp
lab_03/gui/qt/: design.h  mainwindow.cpp  mainwindow.h
lab_03/implementation/: CMakeLists.txt
lab_03/implementation/commands/: command.hpp
lab_03/implementation/config_manager/: config_manager.cpp  config_manager.hpp
lab_03/implementation/drawer/: drawer.hpp
lab_03/implementation/exceptions/: base_exception.hpp  camera_exceptions.hpp  load_exceptions.hpp  (+2 more)
lab_04/: diagram.drawio  direction.h  doors.cpp  doors.h  lab04.pro  lift.cpp  lift.h  lift_cabin.cpp  lift_cabin.h  lift_controller.cpp  lift_controller.h  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
lab_05/: diagram.drawio
(+67 files in other folders)
